# RayTracer

./: .env.cmake  .gitignore  .gitmodules  CMakeLists.txt  README.md  run.sh  unixBuild.sh
app/: CMakeLists.txt
app/src/: Camera.cpp  Camera.h  Material.cpp  Material.h  Payload.h  Pixel.cpp  Pixel.h  Ray.h  RayTracerApp.cpp  Render.cpp  Render.h  Scene.cpp  Scene.h  Texture.cpp
app/src/geo/: CMakeLists.txt  sphere.h
app/src/pdf/: ONB.cpp  ONB.h  pdf.h  pdfCosine.h  pdfMix.h  pdfObject.h
app/src/shading/: Dielectric.cpp  Dielectric.h  Emissive.cpp  Emissive.h  Lambertian.cpp  Lambertian.h  Material.cpp  Material.h  Metal.cpp  Metal.h  Texture.h
app/src/utils/: Magnifier.h  ONB.h  Utilities.h
core/: Application.cpp  Application.h  CMakeLists.txt  EntryPoint.h  Image.h
core/ImGui/: imgui.ini
core/src/: Application.cpp  Application.h  EntryPoint.cpp  Image.cpp  Image.h  Layer.h  Parallel.cpp  Parallel.h  Random.cpp  Random.h  Timer.h
core/src/input/: Input.cpp  Input.h  KeyCodes.h
documentation/uml/: classDiagram.drawio
scripts/: build.bat  makefile  mingwBuild.bat  run.sh  unixBuild.sh  unixBuild_Debug.sh  unixBuild_Release.sh
src/: RayTracerApp.cpp
